[package]
name = "fractic-core"
version = "0.1.0"
edition = "2021"
authors = ["Mart van Buren <mart@fractic.io>"]

[dependencies]
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
rustc-hash = "2.1.1"

[dev-dependencies]
serde = { version = "^1.0.216", features = ["derive"] }
serde_json = "^1.0.133"